<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.edu.udea.compumovil.gr05.lab3pomodoro.MainActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="@dimen/elevation4"/>

    <TextView
        android:id="@+id/lbl_actividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:textSize="@dimen/standar_size"
        android:text="@string/tomate"/>

    <TextView
        android:id="@+id/lbl_contador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size_timer"
        android:text="@string/time_text"/>

    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_weight="1"
        android:background="@color/green_button"
        android:textSize="@dimen/text_size_button"
        android:text="@string/iniciar"
        android:layout_margin="@dimen/margin"/>

    <Button
        android:id="@+id/btn_reiniciar"
        android:layout_marginTop="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_weight="1"
        android:background="@color/red_button"
        android:textSize="@dimen/text_size_button"
        android:text="@string/reiniciar"
        android:layout_margin="@dimen/margin"/>

</LinearLayout>
